# python-timeseries

./: 001_basic.md  Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt
docs/: main.md
