[tool.poetry]
name = "make setup-formatter"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab-vim = "^4.1.3"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.1.3"
black = "^24.4.2"
isort = "^5.13.2"
statsmodels = "^0.14.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
